将zepto-event分析移到了新的文件夹

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -87,3 +87,14 @@ body {
     border-bottom: 0;
   }
 }
+
+// 使用新的字体
+.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6{
+  font-family: Helvetica, Tahoma, Arial, STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑", sans-serif;
+} 
+.align-left{
+  text-align: left;
+}
+.align-justify{
+  text-align: justify;
+}
