--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -95,6 +95,13 @@ body {
 .align-left{
   text-align: left;
 }
+.align-right{
+  text-align: right;
+}
 .align-justify{
   text-align: justify;
+}
+
+.font-red{
+  color:red;
 }
