修改了创建mindmap时的遍历算法

--- a/app/styles/line-height.less
+++ b/app/styles/line-height.less
@@ -1,4 +1,12 @@
+code {
+    font-size: 18px !important;
+}
 .reveal section {
+    div.replaceful {
+        position: relative;
+        top: 0;
+        left: 0;
+    }
     .icon-align-font{
         img{
             width: 100px;
