--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -108,3 +108,24 @@ body {
 .font-red{
   color:red;
 }
+
+.reveal {
+  .tal {
+    text-align: left;
+  }
+  .taj {
+    text-align: justify;
+  }
+  .fr{
+    color: red;
+  }
+  .fb {
+    color: blue;
+  }
+  .fg{
+    color: green;
+  }
+  .main-content {
+    padding-left: 100px;
+  }
+}
